--- a/frontend/src/gui/mainMenu/MainMenuView.form
+++ b/frontend/src/gui/mainMenu/MainMenuView.form
@@ -98,7 +98,7 @@
           </grid>
         </children>
       </grid>
-      <grid id="17150" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="17150" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -112,6 +112,25 @@
             </constraints>
             <properties>
               <text value="Select file to start"/>
+            </properties>
+          </component>
+          <component id="e01ea" class="javax.swing.JProgressBar" binding="progressBar">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <enabled value="true"/>
+              <indeterminate value="true"/>
+              <visible value="false"/>
+            </properties>
+          </component>
+          <component id="106e3" class="javax.swing.JLabel" binding="loadingText">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Label"/>
+              <visible value="false"/>
             </properties>
           </component>
         </children>
