--- a/frontend/src/gui/panels/orderPages/OrderPagesView.form
+++ b/frontend/src/gui/panels/orderPages/OrderPagesView.form
@@ -57,13 +57,18 @@
           </hspacer>
         </children>
       </grid>
-      <scrollpane id="57511">
+      <scrollpane id="57511" binding="scrollPane">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
-        <children/>
+        <children>
+          <component id="263be" class="javax.swing.JList" binding="documentList">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
       </scrollpane>
     </children>
   </grid>
