--- a/frontend/src/gui/panels/mainMenu/MainMenuView.form
+++ b/frontend/src/gui/panels/mainMenu/MainMenuView.form
@@ -39,7 +39,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <grid id="4cf61" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="4cf61" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -57,7 +57,7 @@
                   </component>
                   <component id="192c8" class="javax.swing.JLabel">
                     <constraints>
-                      <grid row="0" column="1" row-span="2" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="1" row-span="3" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
                       <icon value="img/step1.png"/>
@@ -71,6 +71,15 @@
                     <properties>
                       <font size="22" style="1"/>
                       <text value="Step 1"/>
+                    </properties>
+                  </component>
+                  <component id="cf0ad" class="javax.swing.JLabel">
+                    <constraints>
+                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <font style="1"/>
+                      <text value="Note: You must use lined paper for automatic detection to work"/>
                     </properties>
                   </component>
                 </children>
